docDB.tf
resource "aws_docdb_cluster" "main" {
  count                  = var.create_db_instance_docdb ? 1 : 0
  cluster_identifier     = "docdb-cluster-demo"
  availability_zones     = ["us-west-2a"]
  master_username        = "admin"
  master_password        = var.db_password
  vpc_security_group_ids = [aws_security_group.docdb[0].id]
  db_subnet_group_name   = aws_db_subnet_group.main[0].id
}

resource "aws_docdb_cluster_instance" "cluster_instances" {
  count              = var.create_db_instance_docdb ? 1 : 0
  identifier         = "docdb-cluster-demo-${count.index}"
  cluster_identifier = aws_docdb_cluster.main[0].id
  instance_class     = "db.t3.medium"
}

resource "aws_security_group" "docdb" {
  count       = var.create_db_instance_docdb ? 1 : 0
  name        = "docdb_sg"
  description = "this security group allows connection to db"
  vpc_id      = local.vpc_id
}

resource "aws_security_group_rule" "docdb_rule" {
  count                    = var.create_db_instance_docdb && var.create_jump_host ? 1 : 0
  protocol                 = "tcp"
  type                     = "ingress"
  from_port                = 27017
  to_port                  = 27017
  security_group_id        = aws_security_group.docdb[0].id
  source_security_group_id = aws_security_group.jump_host[0].id
}
